--- a/cobjtracking.ui
+++ b/cobjtracking.ui
@@ -241,6 +241,13 @@
           </property>
          </spacer>
         </item>
+        <item row="5" column="1">
+         <widget class="QCheckBox" name="checkBox_3">
+          <property name="text">
+           <string>Perpendicular to path</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </item>
